--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body class="page">
     <header class="header">
       <div class="header__block">
-        <h1 class="header__title">&lt/HTML&gt</h1>
+        <h1 class="header__title">&lt;/HTML&gt;</h1>
         <span class="header__subtitle">закрывающий тег</span>
         <nav class="theme-menu header__theme-menu">
           <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
@@ -62,7 +62,7 @@
           Фритрек и нулевой спринт: Подготовка к работе
         </h2>
         <div class="card__image-wrapper">
-          <span class="card__image-label">&lt/HTML&gt</span>
+          <span class="card__image-label">&lt;/HTML&gt;</span>
           <img class="card__image" src="./images/zero-sprint.jpg" alt="Фургон ночью в ретростиле" />
         </div>
         <div class="card__text-block">
@@ -84,7 +84,6 @@
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="var(--heart-core-color)"/>
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
               </g>
-              <defs>
             </svg>
           </button>
           <button class="card__like-button">
@@ -117,7 +116,6 @@
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="var(--heart-core-color)"/>
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
               </g>
-              <defs>
             </svg>
           </button>
           <button class="card__like-button">
@@ -150,7 +148,6 @@
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="var(--heart-core-color)"/>
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
               </g>
-              <defs>
             </svg>
           </button>
           <button class="card__like-button">
@@ -183,7 +180,6 @@
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="var(--heart-core-color)"/>
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
               </g>
-              <defs>
             </svg>
           </button>
           <button class="card__like-button">
@@ -216,7 +212,6 @@
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="var(--heart-core-color)"/>
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
               </g>
-              <defs>
             </svg>
           </button>
           <button class="card__like-button">
@@ -249,7 +244,6 @@
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="var(--heart-core-color)"/>
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
               </g>
-              <defs>
             </svg>
           </button>
           <button class="card__like-button">
@@ -282,7 +276,6 @@
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="var(--heart-core-color)"/>
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
               </g>
-              <defs>
             </svg>
           </button>
           <button class="card__like-button">
@@ -315,7 +308,6 @@
                 <path class="core" d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z" fill="var(--heart-core-color)"/>
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="none"/>
               </g>
-              <defs>
             </svg>
           </button>
           <button class="card__like-button">
@@ -327,7 +319,7 @@
     <footer class="footer">
       <button class="footer__button" onclick="window['dialog-id'].showModal()" aria-controls="dialog-id">
         <svg class="floppy_svg" viewBox="0 0 100 100">
-          <use href="./svg/floppyy.svg#floppy">
+          <use href="./svg/floppyy.svg#floppy" />
         </svg>
         <span class="footer__button-subtitle">Сохранить на память</span>
       </button>
@@ -335,7 +327,7 @@
     <dialog class="dialog" id="dialog-id">
       <div class="dialog__wrapper">
         <svg class="floppy_svg" viewBox="0 0 39 39">
-          <use href="./svg/floppyy.svg#floppy">
+          <use href="./svg/floppyy.svg#floppy" />
         </svg>
         <p class="dialog__text">Вставьте
           дискету, чтобы продолжить
