--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
         type="button"
         onclick="window['dialog-id'].close()"
       >
-        <span class="dialog__ok-text">ок</span>
+        <span class="button__text">ок</span>
       </button>
     </dialog>
     <script src="./scripts/like.js"></script>
